2006-11-19  Gabor Csardi  <csardi@kzoo.edu>

	* src/structural_properties.c (igraph_transitivity) : removed
	(igraph_transitivity_undirected) : made public, modified to "return" 
	with scalar instead of a vector
	(igraph_transitivity_local_undirected) : added
	* examples/simple/igraph_transitivity.c : updated

	* ssrc/flow.c (igraph_i_mincut_value_undirected) : minor change to 
	make it compile with older gcc
	* src/foreign-graphml.c : include <stdarg.h> to make it compile with
	older gcc
	
2006-11-18  Gabor Csardi  <csardi@kzoo.edu>

	* src/igraph.h (igraph_progress) : prototype added

	* src/components.c (igraph_clusters, igraph_clusters_weak)
	(igraph_clusters_strong) : 'no' argument added

	* src/structural_properties.c (igraph_minimum_spanning_tree_unweighted)
	(igraph_minimum_spanning_tree_prim) : vertex and edge attributes are 
	preserved

2006-11-14  Gabor Csardi  <csardi@kzoo.edu>

	* src/structure_generators.c (igraph_extended_chordal_ring) : added

2006-11-14  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign-graphml.c (igraph_graphml_destroy_state) :
	fixed memory leaks
        * src/foreign-graphml.c (igraph_read_graph_graphml) :
	corrected error handling (former implementation assumed that
	execution is stopped after the call to igraph_error, which
	is not true if the error handler is overridden)

2006-11-09  Gabor Csardi  <csardi@kzoo.edu>

	* src/clustertool.cpp (igraph_spinglass_my_community) : 
	return more data: adhesion, cohesion, inner & outer links
	* src/pottsmodel_2.cpp (PottsModel::FindCommunityFromStart) :
	return more data: adhesion, cohesion, inner & outer links

	* src/clustertool.cpp (igraph_spinglass_community) :
	allow interruption
	* src/pottsmodel_2.cpp (PottModel::FindCommunityFromStart) :
	allow interruption

	* src/clustertoop.cpp (igraph_spinglass_my_community) : 
	better error handling
 	
2006-11-07  Gabor Csardi  <csardi@kzoo.edu>

	* src/clustertool.cpp (igraph_spinglass_my_community) : removed 
	unneccesary arguments
